cookie处理、登录跳转、配合redis+处理手动渲染页面、修改表字段名，符合camel规则

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,7 +8,6 @@ spring.datasource.username=root
 mybatis.mapper-locations=classpath:com/example/demo/*.xml
 #mybatis.mapper-locations=classpath:mapper/*.xml
 #这种方式需要自己在resources目录下创建mapper目录然后存放xml
-
 mybatis.type-aliases-package=com.example.demo.entity
 # 驼峰命名规范 如：数据库字段是  order_id 那么 实体字段就要写成 orderId
 mybatis.configuration.map-underscore-to-camel-case=true
@@ -27,3 +26,19 @@ pagehelper.helper-dialect=mysql
 pagehelper.params=count=countSql
 pagehelper.reasonable=false
 pagehelper.support-methods-arguments=true
+
+
+#redis
+redis.host=47.93.184.134
+#redis.host=127.0.0.1
+redis.port=6379
+redis.timeout=10
+redis.password=123456
+redis.poolMaxTotal=1000
+redis.poolMaxIdle=500
+redis.poolMaxWait=500
+
+
+#thymeleaf
+
+spring.thymeleaf.cache=false
