--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,14 @@
+#参数配置test
+testconfig
 
 
+##这个参数文件的properties可以和某bean进行关联，例如Bean Person类
+person.name=木子
+person.age=20
+person.english_name=muzi
 
+
+#根目录配置，根据不同的场景，由总properties文件来导向不同具体文件
 server.servlet.context-path=/dev
 
 ########## mybatis 配置 ##########
@@ -42,6 +50,23 @@ redis.poolMaxIdle=500
 redis.poolMaxWait=500
 
 
+#spring session redis
+spring.redis.host=47.93.184.134
+spring.redis.port=6379
+spring.redis.password=123456
+
+
 #thymeleaf
 
 spring.thymeleaf.cache=false
+
+
+
+#日志 级别（从低到高：TRACE < DEBUG < INFO < WARN < ERROR < FATAL）
+#SpringBoot 默认的 Logback，内部采用的是 Commons Logging进行日志记录，但在底层为 Java Util Logging、Log4J2、Logback 等日志框架提供了默认配置 。
+#日志文件在达到 10MB 时进行切割，产生一个新的日志文件（如：spring.1.log、spring.2.log），新的日志依旧输出到 spring.log 中去，默认情况下会记录 ERROR、WARN、INFO 级别消息。
+logging.file：log.log
+#logging.file： 将日志写入到指定的 文件 中，默认为相对路径，可以设置成绝对路径
+#logging.path： 将名为 spring.log 写入到指定的 文件夹 中，如（/var/log）
+#logging.file.max-size： 限制日志文件大小
+#logging.file.max-history： 限制日志保留天数
