--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 #用于激活不同配置文件，而并非原始的properties文件
 #格式为 application-{profile}.properties，{profile} 是自己定义。激活不同的配置读取的属性值
+#或者可以在执行程序的时候设置参数也行 不用在本文件设置  java -jar *.jar --spring.profiles.active=dev
 spring.profiles.active=dev
