--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -39,21 +39,37 @@ pagehelper.reasonable=false
 pagehelper.support-methods-arguments=true
 
 
-#redis
-redis.host=47.93.184.134
+#redis 远程服务器版
+#redis.host=47.93.184.134
 #redis.host=127.0.0.1
+#redis.port=6378
+#redis.timeout=10
+#redis.password=redis=123456
+#redis.poolMaxTotal=1000
+#redis.poolMaxIdle=500
+#redis.poolMaxWait=500
+
+
+#redis 本地版
+redis.host=127.0.0.1
 redis.port=6379
 redis.timeout=10
-redis.password=123456
+redis.password=
 redis.poolMaxTotal=1000
 redis.poolMaxIdle=500
 redis.poolMaxWait=500
 
 
 #spring session redis
-spring.redis.host=47.93.184.134
+#spring.redis.host=47.93.184.134
+#spring.redis.port=6378
+#spring.redis.password=redis=123456
+
+#redis 本地版本
+#spring session redis
+spring.redis.host=127.0.0.1
 spring.redis.port=6379
-spring.redis.password=123456
+#spring.redis.password=redis=123456
 
 
 #thymeleaf
